2002-01-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el: Adopt for old Gnusae.

2002-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-strip-forbidden-properties): Don't
	strip properties when the invisible MIME part is inserted.

	* lisp/gnus-xmas.el (gnus-xmas-group-startup-message): Position
	point to the top.

2002-01-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* etc/gnus/oort.xface (X-Face): Oort X-Face from
	Raymond Scholz <ray-2002@zonix.de>.

2002-01-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `coding-system-to-mime-charset' for Mule 2.

	* lisp/nnheader.el (std11-fold-region): New function copied from
	`rfc2047-fold-region'.
	(std11-fold-field): Use it.

2002-01-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el: Don't autoload "gnus-bitmap".

	* lisp/gnus-ems.el: Autoload "smiley-mule" if running Emacs
	version is less than 21.

	* lisp/gnus-art.el (gnus-article-smiley-display): Remove.
	(gnus-treat-smiley): Reload "smiley-ems" or "smiley-mule" if
	needed.
	(gnus-treat-display-smileys): Use `gnus-image-type-available-p'.
	(gnus-article-smiley-mule-loaded-p): New internal variable.
	(gnus-article-should-use-smiley-mule): New user option.

2002-01-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nneething.el (nneething-mime-extensions): New variable.
	(nneething-request-article): Refer it.

	* lisp/nnheader.el (mm-detect-coding-region): Alias to
	`nnheader-detect-coding-region'.
	(nnheader-detect-coding-region): New function.
	(mm-detect-mime-charset-region): Alias to
	`nnheader-detect-mime-charset-region'.
	(nnheader-detect-mime-charset-region) New function.

2002-01-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* texi/gnus-ja.texi (Web Newspaper): Update the document of
	mime-w3m.el.

2002-01-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (article-toggle-headers): Expose headers even
	if there is a boundary line.

	* lisp/nntp.el (nntp-send-buffer): Don't use