@@ -1,3 +1,7 @@
+2002-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-spec.el (gnus-spec-tab): Deal with wide characters.
+
 2002-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* canlock.el (canlock-string-as-unibyte): New macro.
